# nir2025autumn

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: render-plantuml-wiki.yml  render-plantuml.yml
includes/: Animation.h  Buff.h  Buffer.h  ParticleContainer.h  ParticleContainer_impl.h  init_condition.h
includes/Containers/: Buff.h  Buffer.h  ParticleContainer.h  ParticleContainer.tpp
includes/SPH/: KDK.h  RK4.h
includes/init/: init_condition.h
includes/numerics/DIRSUMM/: KDK.h  RK4.h
src/: ParticleContainer.cpp  init_condition.cpp  main.cpp  plot.gpl  test.cpp
src/Containers/: ParticleContainer.cpp
src/DIRSUMM/: KDK.cpp  RK4.cpp
src/SPH/: KDK.cpp  RK4.cpp
src/init/: init_condition.cpp
